add predict
