# routes/api.php
@@ -52,6 +52,7 @@ Route::post('/members/compare_similarity', [\App\Http\Controllers\api\MemberCont
 Route::post('/compare', [\App\Http\Controllers\api\CompareController::class, 'compare']);
 
 Route::post('/lbph_face_recognition/train', [\App\Http\Controllers\api\LBPHFaceRecognitionController::class, 'train']);
+Route::post('/lbph_face_recognition/predict', [\App\Http\Controllers\api\LBPHFaceRecognitionController::class, 'predict']);
 
 Route::get('/test-extension', function () {
     $result = CV::Point(); // Replace with the actual function from your extension
